[package]
name = "denokv_lmdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
denokv_proto = "0.7.0"
anyhow = "1.0.82"
tokio = "1.0"
heed = "0.11.0"
oneshot = "0.1.6"
thiserror = "1.0.58"
async-trait = "0.1.80"